# claude-dontstop-tool

./: README.md  main.py  pyproject.toml
claude_hook/: __init__.py  sound.py  todo.py
tests/: test_hook.py  test_todo.py
