[project]
name = "claude-dontstop-tool"
version = "0.1.0"
description = "Hook that makes Claude decide and proceed instead of asking yes/no questions"
requires-python = ">=3.9"

[project.scripts]
claude-dontstop = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
