[project]
name = "claude-custom-hook"
version = "0.3.0"
description = "Claude Code hooks: auto-deny binary questions, sounds, todo management"
requires-python = ">=3.9"
dependencies = ["pytest"]

[project.scripts]
claude-custom-hook = "claude_hook:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
